syntax = "proto3";
package blog.v1;

option go_package = "github.com/blog";

import "blog/v1/types.proto";
import "google/api/annotations.proto";
import "cosmos/query/v1/query.proto";
import "gogoproto/gogo.proto";

// Query defines the module Query service.
service Query {
  // GetPost returns the post at the requested index.
  rpc GetPost(QueryGetPostRequest) returns (QueryGetPostResponse) {
    option (cosmos.query.v1.module_query_safe) = true;
    option (google.api.http).get =
      "/blog/v1/post/{index}";
  }
}

// QueryGetPostRequest is the request type for the Query/GetPost RPC
// method.
message QueryGetPostRequest {
  // index defines the index of the post to retrieve.
  string index = 1;
}

// QueryGetPostResponse is the response type for the Query/GetPost RPC
// method.
message QueryGetPostResponse {
  // Post defines the post at the requested index.
  StoredPost Post = 1;
}
